# PUT

./: CMakeLists.txt  main.c
AIDS/Backtracing/: bench.py  directed_graph.py  euler.py  hamilton.py  indirected_graph.py  main.py  test.py
AIDS/DynamicProgramming/: Bench.py  algs.py  dane.txt  main.py
AIDS/Graphs/: Generator.py  Graph.py  Matrix.py  Sorts.py  main.py  results.db  results.db-journal
AIDS/Sorting/: bubblesort.py  generator.py  insertionsort.py  main.py  selectionsort.py
AIDS/Tree/: AVL.py  BST.py  Node.py  generator.py  main.py  test.db
Application/: calc.py
Application/Intervals/: Cargo.toml
Application/Intervals/src/: float.rs  lib.rs
Application/interval/: Cargo.toml
Application/interval/src/: main.rs
Application/math/: core.c
Application/math/lib/src/: float.c  interval.c
CLanguage/: main.c
CLanguage/System/: widget.c
ENA/: App.py  plik.txt
ENA/AppComponents/: Colors.py  NavBar.py  OptionBar.py  Window.py
ENA/Arithmetics/: Makefile  data.txt  interpolation.cpp  interval.cpp  lagrange_interpolation.cpp  main  main.cpp  main2.cpp
ENA/Arithmetics/include/: interpolation.h  interpolation.hpp  interval.h  interval.hpp  lagrange_interpolation.h
SEMESTER_IV/GraphicsAndVisualisation/: cameras.py  main.py  requirements.txt
SEMESTER_IV/GraphicsAndVisualisation/Resources/: chessboard.glb  cinematic_shader.glsl
Sorting/: generator.py  heapsort.py  main.py  mergesort.py  quicksort.py  records.py
Sorting/Plots/: database.db
System/: widget.c  window.c
System/include/: widget.h  window.h
Tree/: BST.py  Node.py  main.py
